--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -1,23 +1,23 @@
 .inputLogin {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .h1Login {
-    border-bottom: 1px solid #DCDBDB;
+  border-bottom: 1px solid #dcdbdb;
 }
 
 .inputLogin input {
-    padding: 5px;
-    border-radius: 20px;
-    width: 300px;
+  padding: 5px;
+  border-radius: 20px;
+  width: 300px;
 }
 
 .helpLogin {
-    margin: 15px;
+  margin: 15px;
 }
 
 .buttonLogin {
-    margin: 10px;
+  margin: 10px;
 }
