modo oscuro creado

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 
 body {
   font-family: "Roboto", sans-serif;
-  background-color: #f2f2f2;
+  background-color: #222;
 }
 
 a.colorLink {
@@ -82,4 +82,8 @@ a {
 
 .fondo-jade {
   background-color: #55dac3;
+}
+
+.dark {
+  filter:invert(1);
 }
